[tool.poetry]
name = "cloud-orbit-api"
version = "0.1.0"
description = "This a demo project"
authors = ["sukruth grandhi <sukruthgrandhi@gmail.com>"]
readme = "README.md"
packages = [{include = "cloud_orbit_api"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
